fix deploy problem